# Testing

./: CMakeLists.txt  README.md
Detection/: Comparisons.h
Utils/: TimeTester.h
